@@ -106,9 +106,12 @@ class DLVHEX_EXPORT MLPSolver{
     inline bool isEmptyInterpretation(int S);
     inline bool foundNotEmptyInst(ValueCallsType C);
     inline void unionCtoFront(ValueCallsType& C, const ValueCallsType& C2);
-    inline ProgramCtx rewriteHalf(const ValueCallsType& C);
-    inline bool isOrdinary(Tuple idb);
+    inline std::string getAtomTextFromTuple(const Tuple& tuple);
+    inline const ID& rewriteAtom(const OrdinaryAtom& oldAtom, const std::string& prefix);
+    inline void rewriteTuple(Tuple& tuple, const std::string& prefix);
+    inline void rewrite(const ValueCallsType& C, InterpretationPtr& edbResult, Tuple& idbResult);
 
+    // inline bool isOrdinary(Tuple idb);
     inline std::vector<int> foundMainModules();
     inline ValueCallsType createValueCallsMainModule(int idxModule);
     inline void assignFin(Tuple& t);
@@ -124,8 +127,7 @@ class DLVHEX_EXPORT MLPSolver{
 
 MLPSolver::MLPSolver(ProgramCtx& ctx1){
   ctx = ctx1;
-  ProgramCtx ctxNew;
-  ctxNew.setupRegistryPluginContainer(ctx.registry());
+  ctxSolver.setupRegistryPluginContainer(ctx.registry());
 
   //TODO: initialization of tableS, tableInst, C, A, M, path, AS here;
   DBGLOG(DBG, "[MLPSolver::MLPSolver] constructor finished");
@@ -178,6 +180,7 @@ int MLPSolver::extractPi(int PiS)
   return m.idxModule;
 }
 
+
 //TODO: should be const Tuple& ?
 Tuple getIdbFromModule(int idxModule)
 {
@@ -185,7 +188,10 @@ Tuple getIdbFromModule(int idxModule)
 }
 
 //TODO: should be const Interpretation& ?
-InterpretationPtr getEdb
+InterpretationPtr getEdbFromModule(int idxModule)
+{
+
+}
 
 bool MLPSolver::isEmptyInterpretation(int S)
 {
@@ -230,33 +236,166 @@ void MLPSolver::unionCtoFront(ValueCallsType& C, const ValueCallsType& C2)
     }
 }
 
-//TODO: should be const ProgramCtx&
-ProgramCtx MLPSolver::rewriteHalf(const ValueCallsType& C)
-{ 
-  // prepare edb
-  ctxNew.edbList.resize(1);
-  ctxNew.edbList.front().reset( new Interpretation( ctx.registry() ) );
-  // prepare idb
-  ctxNew.idbList.resize(1);
-  // loop over C
-  VCAddressIndex::const_iterator itC = VCAddressIndex.get<impl::AddressTag>().begin();
-  VCAddressIndex::const_iterator itCend = VCAddressIndex.get<impl::AddressTag>().end();
-  while ( itC != itCend )
+std::string MLPSolver::getAtomTextFromTuple(const Tuple& tuple)
+{
+  std::stringstream ss;
+  RawPrinter printer(ss, ctxSolver.registry());
+  Tuple::const_iterator it = tuple.begin();
+  printer.print(*it);
+  std::string predInsideName = ss.str();
+  it++;
+  if( it != tuple.end() )
     {
-      // get the module idx
-      int idxM = extractPi(*itC);
-      Module m = ctx.registry()->moduleTable.getByAddress(idxModule);
-      // put edb
-      ctxNew.edbList.front()->add(*ctx.edbList.at(m.edb));  
-      // put idb   
-      // TODO: optimize here by storing ctxNew.idbList.front() and ctx.idbList.at(m.idb) into variables?
-      ctxNew.idbList.front().insert(ctxNew.idbList.front().end(), ctx.idbList.at(m.idb).begin(), ctx.idbList.at(m.idb).end());
-      // TODO: inpect module atoms, replace with o, remove module rule property
-      itC++;
+      ss << "(";
+      printer.print(*it);
+      it++;
+      while(it != tuple.end())
+        {
+  	  ss << ",";
+  	  printer.print(*it);
+  	  it++;
+  	}
+      ss << ")";
+    }
+  return ss.str();
+}
+
+
+const ID& MLPSolver::rewriteAtom(const OrdinaryAtom& oldAtom, const std::string& prefix)
+{
+  // create the new atom (so that we do not rewrite the original one
+  OrdinaryAtom atomRnew = oldAtom;
+  // access the predicate name
+  ID& predR = atomRnew.tuple.front();
+  Predicate p = ctx.registry()->preds.getByID(predR);
+  // rename the predicate name by <prefix> + <old name>
+  p.symbol = prefix + p.symbol;
+  DBGLOG(DBG, "[MLPSolver::rewrite] " << p.symbol);
+  // try to locate the new pred name
+  ID predNew = ctxSolver.registry()->preds.getIDByString(p.symbol);
+  DBGLOG(DBG, "[MLPSolver::rewrite] ID predNew = " << predNew);
+  if ( predNew == ID_FAIL )
+    {
+      predNew = ctxSolver.registry()->preds.storeAndGetID(p);      
+      DBGLOG(DBG, "[MLPSolver::rewrite] ID predNew after FAIL = " << predNew);
+    }
+  // rewrite the predicate inside atomRnew	
+  predR = predNew;
+  DBGLOG(DBG, "[MLPSolver::rewrite] new predR = " << predR);
+  // replace the atom text
+  atomRnew.text = getAtomTextFromTuple(atomRnew.tuple);
+  // try to locate the new atom (the rewritten one)
+  ID atomFind = ctxSolver.registry()->ogatoms.getIDByString(atomRnew.text);
+  DBGLOG(DBG, "[MLPSolver::rewrite] ID atomFind = " << atomFind);
+  if (atomFind == ID_FAIL)	
+    {
+      atomFind = ctxSolver.registry()->ogatoms.storeAndGetID(atomRnew);	
+      DBGLOG(DBG, "[MLPSolver::rewrite] ID atomFind after FAIL = " << atomFind);
+    }
+  return atomFind;
+}
+
+
+void MLPSolver::rewriteTuple(Tuple& tuple, const std::string& prefix)
+{
+  Tuple::iterator it = tuple.begin();
+  while ( it != tuple.end() )
+    {
+      if ( (*it).isOrdinaryGroundAtom() )
+        {
+	  *it = rewriteAtom(ctx.registry()->ogatoms.getByID(*it), prefix);
+        }
+      else if ( (*it).isOrdinaryNongroundAtom() )
+        {
+	  *it = rewriteAtom(ctx.registry()->onatoms.getByID(*it), prefix);
+        }
+      it++;
     }
 }
 
-// TODO: test this
+
+//TODO: should be const ProgramCtx&
+void MLPSolver::rewrite(const ValueCallsType& C, InterpretationPtr& edbResult, Tuple& idbResult)
+{ 
+  // prepare edbResult
+  edbResult.reset(new Interpretation( ctxSolver.registry() ) ); 
+  // prepare idbResult
+  idbResult.clear();
+  // loop over C
+  VCAddressIndex::const_iterator itC = C.get<impl::AddressTag>().begin();
+  VCAddressIndex::const_iterator itCend = C.get<impl::AddressTag>().end();
+  while ( itC != itCend )
+    { 
+      // get the module idx and idx S
+      int idxM = extractPi(*itC);
+      int idxS = extractS(*itC);
+      Module m = ctx.registry()->moduleTable.getByAddress(idxM);
+      std::stringstream ss;
+      ss << "m" << idxM << "S" << idxS << "__";
+      // rewrite the edb
+      // loop over edb pointed by m			
+      Interpretation::Storage bits = ctx.edbList.at(m.edb)->getStorage();
+      Interpretation::Storage::enumerator it = bits.first();
+      while ( it!=bits.end() ) 
+        {
+	  // get the atom that is pointed by *it (element of the edb)
+	  const OrdinaryAtom& atomR = ctx.registry()->ogatoms.getByAddress(*it);
+	  // rewrite the atomR, resulting in a new atom with prefixed predicate name, change: the registry in ctxSolver
+	  const ID& atomRewrite = rewriteAtom(atomR, ss.str());
+	  edbResult->setFact(atomRewrite.address);
+	  it++;
+        }		
+      // looping over the edb
+      	// enter new name to the atom table ctxSolver
+      	// clear the old atom, set the new atom	       		
+
+      // rewrite the idb
+      Tuple idbTemp;	
+      idbTemp.insert(idbTemp.end(), ctx.idbList.at(m.idb).begin(), ctx.idbList.at(m.idb).end());
+      Tuple::iterator itT = idbTemp.begin();
+      while (itT != idbTemp.end())
+	{
+	  const Rule& r = ctx.registry()->rules.getByID(*itT);
+	  Rule rNew = r;
+	  rewriteTuple(rNew.head, ss.str());	
+	  rewriteTuple(rNew.body, ss.str());
+	  ID rNewID = ctxSolver.registry()->rules.storeAndGetID(rNew);
+	  idbResult.push_back(rNewID);
+	  itT++;
+	}	
+      // loop over std::vector<ID>
+	// each id is rule, get from the rule table
+	// loop over its head
+		// get the id of the atoms
+		// from the atoms table, get the tuple of id <term, constant>
+		// rename the predicate, change the id 
+	// loop over its body  	
+		// get the id of the atoms
+		// from the atoms table, get the tuple of id <term, constant>
+		// rename the predicate, change the id 
+
+      // put edb
+      // ctxNew.edbList.front()->add(*ctx.edbList.at(m.edb));  
+      // put idb   
+      // TODO: optimize here by storing ctxNew.idbList.front() and ctx.idbList.at(m.idb) into variables?
+      // ctxNew.idbList.front().insert(ctxNew.idbList.front().end(), ctx.idbList.at(m.idb).begin(), ctx.idbList.at(m.idb).end());
+      // TODO: inpect module atoms, replace with o, remove module rule property
+      itC++;
+    }
+  // printing result
+  DBGLOG(DBG, "[MLPSolver::rewrite] in the end:");
+  DBGLOG(DBG, *ctxSolver.registry()); 
+  RawPrinter printer(std::cerr, ctxSolver.registry());
+  std::cerr << "edb = " << *edbResult << std::endl;
+  DBGLOG(DBG, "idb begin"); 
+  printer.printmany(idbResult,"\n"); 
+  std::cerr << std::endl; 
+  DBGLOG(DBG, "idb end");
+
+}
+
+// TODO: OPEN THIS
+/*
 bool MLPSolver::isOrdinary(const Tuple& idb)
 { 
   bool result = true;
@@ -274,7 +413,7 @@ bool MLPSolver::isOrdinary(const Tuple& idb)
     }
   return result;
 }
-
+*/
 
 void MLPSolver::assignFin(Tuple& t)
 { //TODO
@@ -293,6 +432,8 @@ void MLPSolver::comp(ValueCallsType C)
 {
 //TODO: uncomment this:  do {
   //TODO: check the initialization
+  // open this to check loop
+  // path.push_back(C);
   ValueCallsType CPrev;
   int PiSResult;
   if ( foundCinPath(C, path, CPrev, PiSResult) )
@@ -330,9 +471,14 @@ void MLPSolver::comp(ValueCallsType C)
   InterpretationPtr edbRewrite;
   Tuple idbRewrite;
   rewrite(C, edbRewrite, idbRewrite); 
+  DBGLOG(DBG, "[MLPSolver::comp] after rewrite: ");
+  DBGLOG(DBG, "[MLPSolver::comp] edb: " << *edbRewrite);
+  DBGLOG(DBG, "[MLPSolver::comp] idb: ");
+  
+/* TODO: OPEN THIS
   if ( isOrdinary(idbRewrite) )
     {
-/* TODO: OPEN THIS
+
       if ( path.size() == 0 ) 
         {
           //TODO: for all ans(newCtx) here
@@ -352,11 +498,11 @@ void MLPSolver::comp(ValueCallsType C)
           //TODO: for all ans(newCtx) here
           // push stack here: C, path, unionplus(M, mlpize(N,C)), A, AS
         }
-*/
+
     }
   else
     {
-/*
+
       ID id = smallestILL(idbRewrite);
       //TODO: create method smallestILL(ProgramCtx)
       const VCAddressIndex& idx = C.get<impl::AddressTag>();
