@@ -1,5 +1,7 @@
 2010-02-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/MLPSolver.hpp: implement rewrite
+
 	* include/dlvhex/ID.hpp: modified the ID for module atom, adapted to isOrdinaryAtom() method
 	* src/dlvhex/ID.cpp: Likewise
 
